package floyd.raft;

message Entry {
	enum Type {
		DATA = 0;
		NOOP = 1;
	}
  required Type type = 1;
	required uint64 term = 2;
	optional bytes cmd = 3;
}

message RequestVote {
	required bytes ip = 1;
	required int32 port = 2;
	required uint64 term = 3;
	required uint64 last_log_term = 4;
	required uint64 last_log_index = 5;
}

message ResponseVote {
	required uint64 term = 1;
	required bool granted = 2;
}

message AppendEntriesRequest {
	required bytes ip = 1;
	required int32 port = 2;
	required uint64 term = 3;
	required uint64 prev_log_index = 4;
	required uint64 prev_log_term = 5;
	required uint64 commit_index = 6;
	repeated Entry entries = 7;
}

message AppendEntriesResponse {
	required bool status = 1;
	required uint64 term = 2;
}
